bsb-parser.js
!function(e){if("object"==typeof exports&&"undefined"!=typeof module)module.exports=e();else if("function"==typeof define&&define.amd)define([],e);else{var f;"undefined"!=typeof window?f=window:"undefined"!=typeof global?f=global:"undefined"!=typeof self&&(f=self),f.bsbParser=e()}}(function(){var define,module,exports;return (function e(t,n,r){function s(o,u){if(!n[o]){if(!t[o]){var a=typeof require=="function"&&require;if(!u&&a)return a(o,!0);if(i)return i(o,!0);var f=new Error("Cannot find module '"+o+"'");throw f.code="MODULE_NOT_FOUND",f}var l=n[o]={exports:{}};t[o][0].call(l.exports,function(e){var n=t[o][1][e];return s(n?n:e)},l,l.exports,e,t,n,r)}return n[o].exports}var i=typeof require=="function"&&require;for(var o=0;o<r.length;o++)s(r[o]);return s})({1:[function(require,module,exports){
var parser = require('./parser');
var reader = require('./reader');

exports.parse = function (header) {
	return parser.parse(header);
};

exports.fromFile = function (filepath, callback) {
	reader.read(filepath, function (err, header) {
		if (err) return callback(err);

		var result, error;
		try {
			result = parser.parse(header);
		} catch (e) {
			error = e;
		} finally {
			callback(error, result);
		}
	});
};
},{"./parser":2,"./reader":3}],2:[function(require,module,exports){
module.exports = (function() {
  /*
   * Generated by PEG.js 0.8.0.
   *
   * http://pegjs.majda.cz/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function SyntaxError(message, expected, found, offset, line, column) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.offset   = offset;
    this.line     = line;
    this.column   = column;

    this.name     = "SyntaxError";
  }

  peg$subclass(SyntaxError, Error);

  function parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},

        peg$FAILED = {},

        peg$startRuleFunctions = { content: peg$parsecontent },
        peg$startRuleFunction  = peg$parsecontent,

        peg$c0 = peg$FAILED,
        peg$c1 = null,
        peg$c2 = [],
        peg$c3 = function() {
        	return result;
        },
        peg$c4 = function(entry) { return entry },
        peg$c5 = /^[^\r\n]/,
        peg$c6 = { type: "class", value: "[^\\r\\n]", description: "[^\\r\\n]" },
        peg$c7 = function(text) { return concat(text) },
        peg$c8 = /^[^,\r\n]/,
        peg$c9 = { type: "class", value: "[^,\\r\\n]", description: "[^,\\r\\n]" },
        peg$c10 = "\r",
        peg$c11 = { type: "literal", value: "\r", description: "\"\\r\"" },
        peg$c12 = "\n",
        peg$c13 = { type: "literal", value: "\n", description: "\"\\n\"" },
        peg$c14 = "    ",
        peg$c15 = { type: "literal", value: "    ", description: "\"    \"" },
        peg$c16 = ",",
        peg$c17 = { type: "literal", value: ",", description: "\",\"" },
        peg$c18 = /^[\-0-9.e+]/,
        peg$c19 = { type: "class", value: "[\\-0-9.e+]", description: "[\\-0-9.e+]" },
        peg$c20 = function(number) { return toNumber(number) },
        peg$c21 = /^[1-9]/,
        peg$c22 = { type: "class", value: "[1-9]", description: "[1-9]" },
        peg$c23 = /^[0-9]/,
        peg$c24 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c25 = function(v) { return toNumber(v) - 1 },
        peg$c26 = /^[a-zA-Z0-9 ]/,
        peg$c27 = { type: "class", value: "[a-zA-Z0-9 ]", description: "[a-zA-Z0-9 ]" },
        peg$c28 = function(words) { return concat(words) },
        peg$c29 = function(r, g, b) { return [r, g, b] },
        peg$c30 = "/",
        peg$c31 = { type: "literal", value: "/", description: "\"/\"" },
        peg$c32 = function(d, m, y) { return [d, m ,y] },
        peg$c33 = "!",
        peg$c34 = { type: "literal", value: "!", description: "\"!\"" },
        peg$c35 = function(comment) { result.comment = comment },
        peg$c36 = function(text) { return text },
        peg$c37 = function(lines) { return lines.join(' ') },
        peg$c38 = "CRR/CERTIFICATE OF AUTHENTICITY:",
        peg$c39 = { type: "literal", value: "CRR/CERTIFICATE OF AUTHENTICITY:", description: "\"CRR/CERTIFICATE OF AUTHENTICITY:\"" },
        peg$c40 = function(certificate) {
        	result.certificate = certificate
        },
        peg$c41 = "VER/",
        peg$c42 = { type: "literal", value: "VER/", description: "\"VER/\"" },
        peg$c43 = function(version) { result.version = version },
        peg$c44 = "BSB/",
        peg$c45 = { type: "literal", value: "BSB/", description: "\"BSB/\"" },
        peg$c46 = function(entries) { result.bsb = arrayToObj(entries) },
        peg$c47 = "RA=",
        peg$c48 = { type: "literal", value: "RA=", description: "\"RA=\"" },
        peg$c49 = function(width, height) {
        	return { width: width, height: height }
        },
        peg$c50 = "NA=",
        peg$c51 = { type: "literal", value: "NA=", description: "\"NA=\"" },
        peg$c52 = function(name) { return { name: name } },
        peg$c53 = "NU=",
        peg$c54 = { type: "literal", value: "NU=", description: "\"NU=\"" },
        peg$c55 = function(index) { return { index: index } },
        peg$c56 = "DU=",
        peg$c57 = { type: "literal", value: "DU=", description: "\"DU=\"" },
        peg$c58 = function(dpi) { return { dpi: dpi } },
        peg$c59 = "KNP/",
        peg$c60 = { type: "literal", value: "KNP/", description: "\"KNP/\"" },
        peg$c61 = function(entries) { result.knp = arrayToObj(entries) },
        peg$c62 = "SC=",
        peg$c63 = { type: "literal", value: "SC=", description: "\"SC=\"" },
        peg$c64 = function(sc) { return { scale: sc } },
        peg$c65 = "GD=",
        peg$c66 = { type: "literal", value: "GD=", description: "\"GD=\"" },
        peg$c67 = function(gc) { return { datum: gc } },
        peg$c68 = "PR=",
        peg$c69 = { type: "literal", value: "PR=", description: "\"PR=\"" },
        peg$c70 = function(pr) { return { projection: pr } },
        peg$c71 = "PP=",
        peg$c72 = { type: "literal", value: "PP=", description: "\"PP=\"" },
        peg$c73 = function(pp) { return { projectionParameter: pp } },
        peg$c74 = "PI=",
        peg$c75 = { type: "literal", value: "PI=", description: "\"PI=\"" },
        peg$c76 = function(pi) { return { pi: pi } },
        peg$c77 = "SP=",
        peg$c78 = { type: "literal", value: "SP=", description: "\"SP=\"" },
        peg$c79 = function(sp) { return { sp: sp } },
        peg$c80 = "SK=",
        peg$c81 = { type: "literal", value: "SK=", description: "\"SK=\"" },
        peg$c82 = function(sk) { return { skewAngle: sk } },
        peg$c83 = "TA=",
        peg$c84 = { type: "literal", value: "TA=", description: "\"TA=\"" },
        peg$c85 = function(ta) { return { ta: ta } },
        peg$c86 = "UN=",
        peg$c87 = { type: "literal", value: "UN=", description: "\"UN=\"" },
        peg$c88 = function(un) { return { units: un } },
        peg$c89 = "SD=",
        peg$c90 = { type: "literal", value: "SD=", description: "\"SD=\"" },
        peg$c91 = function(sd) { return { sounding: sd } },
        peg$c92 = "DX=",
        peg$c93 = { type: "literal", value: "DX=", description: "\"DX=\"" },
        peg$c94 = function(dx) { return { dx: dx } },
        peg$c95 = "DY=",
        peg$c96 = { type: "literal", value: "DY=", description: "\"DY=\"" },
        peg$c97 = function(dy) { return { dy: dy } },
        peg$c98 = "KNQ/",
        peg$c99 = { type: "literal", value: "KNQ/", description: "\"KNQ/\"" },
        peg$c100 = function(entries) { result.knq = arrayToObj(entries) },
        peg$c101 = /^[A-Z]/,
        peg$c102 = { type: "class", value: "[A-Z]", description: "[A-Z]" },
        peg$c103 = /^[A-Z0-9]/,
        peg$c104 = { type: "class", value: "[A-Z0-9]", description: "[A-Z0-9]" },
        peg$c105 = "=",
        peg$c106 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c107 = function(key, value) {
        	var obj = {};
        	obj[concat(key).toLowerCase()] = value;
        	return obj;
        },
        peg$c108 = "OST/",
        peg$c109 = { type: "literal", value: "OST/", description: "\"OST/\"" },
        peg$c110 = function(ost) {
        	result.offsetStrip = ost;
        },
        peg$c111 = "IFM/",
        peg$c112 = { type: "literal", value: "IFM/", description: "\"IFM/\"" },
        peg$c113 = function(ifm) {
        	result.colormapDepth = ifm;
        },
        peg$c114 = "DTM/",
        peg$c115 = { type: "literal", value: "DTM/", description: "\"DTM/\"" },
        peg$c116 = function(x, y) {
        	result.dtm = [x, y];
        },
        peg$c117 = "CED/",
        peg$c118 = { type: "literal", value: "CED/", description: "\"CED/\"" },
        peg$c119 = function(entries) {
        	result.chartEdition = arrayToObj(entries);
        },
        peg$c120 = "SE=",
        peg$c121 = { type: "literal", value: "SE=", description: "\"SE=\"" },
        peg$c122 = function(se) { return { source: se } },
        peg$c123 = "RE=",
        peg$c124 = { type: "literal", value: "RE=", description: "\"RE=\"" },
        peg$c125 = function(re) { return { raster: re } },
        peg$c126 = "ED=",
        peg$c127 = { type: "literal", value: "ED=", description: "\"ED=\"" },
        peg$c128 = function(ed) { return { chart: ed } },
        peg$c129 = "CPH/",
        peg$c130 = { type: "literal", value: "CPH/", description: "\"CPH/\"" },
        peg$c131 = function(cph) {
        	result.phaseShift = cph;
        },
        peg$c132 = "RGB/",
        peg$c133 = { type: "literal", value: "RGB/", description: "\"RGB/\"" },
        peg$c134 = function(i, color) { 
        	result.rgbs[i] = color;
        },
        peg$c135 = "REF/",
        peg$c136 = { type: "literal", value: "REF/", description: "\"REF/\"" },
        peg$c137 = function(i, x, y, lat, lng) { 
        	result.references[i] = { x: x, y: y, lat:lat, lng: lng };
        },
        peg$c138 = "PLY/",
        peg$c139 = { type: "literal", value: "PLY/", description: "\"PLY/\"" },
        peg$c140 = function(i, lat, lng) {
        	result.polygon[i] = [lat, lng];
        },
        peg$c141 = "ERR/",
        peg$c142 = { type: "literal", value: "ERR/", description: "\"ERR/\"" },
        peg$c143 = function(i, x, y, lat, lng) {
        	result.errors[i] = { x: x, y:y, lat:lat, lng: lng};
        },
        peg$c144 = "WPX",
        peg$c145 = { type: "literal", value: "WPX", description: "\"WPX\"" },
        peg$c146 = "WPY",
        peg$c147 = { type: "literal", value: "WPY", description: "\"WPY\"" },
        peg$c148 = "PWX",
        peg$c149 = { type: "literal", value: "PWX", description: "\"PWX\"" },
        peg$c150 = "PWY",
        peg$c151 = { type: "literal", value: "PWY", description: "\"PWY\"" },
        peg$c152 = function(key, value, values) { 
        	result[key.toLowerCase()] = [value].concat(values);
        },
        peg$c153 = function(value) { return value },
        peg$c154 = function(key, value, values) {
        	result[concat(key).toLowerCase()] = value + ' ' + values.join(' ');
        },

        peg$currPos          = 0,
        peg$reportedPos      = 0,
        peg$cachedPos        = 0,
        peg$cachedPosDetails = { line: 1, column: 1, seenCR: false },
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$reportedPos, peg$currPos);
    }

    function offset() {
      return peg$reportedPos;
    }

    function line() {
      return peg$computePosDetails(peg$reportedPos).line;
    }

    function column() {
      return peg$computePosDetails(peg$reportedPos).column;
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        peg$reportedPos
      );
    }

    function error(message) {
      throw peg$buildException(message, null, peg$reportedPos);
    }

    function peg$computePosDetails(pos) {
      function advance(details, startPos, endPos) {
        var p, ch;

        for (p = startPos; p < endPos; p++) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }
        }
      }

      if (peg$cachedPos !== pos) {
        if (peg$cachedPos > pos) {
          peg$cachedPos = 0;
          peg$cachedPosDetails = { line: 1, column: 1, seenCR: false };
        }
        advance(peg$cachedPosDetails, peg$cachedPos, pos);
        peg$cachedPos = pos;
      }

      return peg$cachedPosDetails;
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, pos) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0180-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1080-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      var posDetails = peg$computePosDetails(pos),
          found      = pos < input.length ? input.charAt(pos) : null;

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        pos,
        posDetails.line,
        posDetails.column
      );
    }

    function peg$parsecontent() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parsecomment();
      if (s1 === peg$FAILED) {
        s1 = peg$c1;
      }
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parsecmd();
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parsecmd();
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parsenewline();
          if (s3 === peg$FAILED) {
            s3 = peg$c1;
          }
          if (s3 !== peg$FAILED) {
            peg$reportedPos = s0;
            s1 = peg$c3();
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsecmd() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parsenewline();
      if (s1 !== peg$FAILED) {
        s2 = peg$parsecrr();
        if (s2 === peg$FAILED) {
          s2 = peg$parseversion();
          if (s2 === peg$FAILED) {
            s2 = peg$parseost();
            if (s2 === peg$FAILED) {
              s2 = peg$parseifm();
              if (s2 === peg$FAILED) {
                s2 = peg$parsedtm();
                if (s2 === peg$FAILED) {
                  s2 = peg$parseced();
                  if (s2 === peg$FAILED) {
                    s2 = peg$parsecph();
                    if (s2 === peg$FAILED) {
                      s2 = peg$parsebsb();
                      if (s2 === peg$FAILED) {
                        s2 = peg$parseknp();
                        if (s2 === peg$FAILED) {
                          s2 = peg$parseknq();
                          if (s2 === peg$FAILED) {
                            s2 = peg$parsergb();
                            if (s2 === peg$FAILED) {
                              s2 = peg$parseref();
                              if (s2 === peg$FAILED) {
                                s2 = peg$parseply();
                                if (s2 === peg$FAILED) {
                                  s2 = peg$parseerror();
                                  if (s2 === peg$FAILED) {
                                    s2 = peg$parsewppw();
                                    if (s2 === peg$FAILED) {
                                      s2 = peg$parseany();
                                    }
                                  }
                                }
                              }
                            }
                          }
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c4(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsetext() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      if (peg$c5.test(input.charAt(peg$currPos))) {
        s2 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c6); }
      }
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        if (peg$c5.test(input.charAt(peg$currPos))) {
          s2 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c6); }
        }
      }
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c7(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseinner_text() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      if (peg$c8.test(input.charAt(peg$currPos))) {
        s2 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c9); }
      }
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        if (peg$c8.test(input.charAt(peg$currPos))) {
          s2 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c9); }
        }
      }
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c7(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parsenewline() {
      var s0, s1, s2;

      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 13) {
        s1 = peg$c10;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c11); }
      }
      if (s1 === peg$FAILED) {
        s1 = peg$c1;
      }
      if (s1 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 10) {
          s2 = peg$c12;
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c13); }
        }
        if (s2 !== peg$FAILED) {
          s1 = [s1, s2];
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parseindent() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parsenewline();
      if (s1 !== peg$FAILED) {
        if (input.substr(peg$currPos, 4) === peg$c14) {
          s2 = peg$c14;
          peg$currPos += 4;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c15); }
        }
        if (s2 !== peg$FAILED) {
          s1 = [s1, s2];
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsecomma() {
      var s0;

      if (input.charCodeAt(peg$currPos) === 44) {
        s0 = peg$c16;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c17); }
      }

      return s0;
    }

    function peg$parsenumber() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      if (peg$c18.test(input.charAt(peg$currPos))) {
        s2 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c19); }
      }
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          if (peg$c18.test(input.charAt(peg$currPos))) {
            s2 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c19); }
          }
        }
      } else {
        s1 = peg$c0;
      }
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c20(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseindex() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = peg$currPos;
      if (peg$c21.test(input.charAt(peg$currPos))) {
        s2 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c22); }
      }
      if (s2 !== peg$FAILED) {
        s3 = [];
        if (peg$c23.test(input.charAt(peg$currPos))) {
          s4 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c24); }
        }
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          if (peg$c23.test(input.charAt(peg$currPos))) {
            s4 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c24); }
          }
        }
        if (s3 !== peg$FAILED) {
          s2 = [s2, s3];
          s1 = s2;
        } else {
          peg$currPos = s1;
          s1 = peg$c0;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$c0;
      }
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c25(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parsewords() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      if (peg$c26.test(input.charAt(peg$currPos))) {
        s2 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c27); }
      }
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          if (peg$c26.test(input.charAt(peg$currPos))) {
            s2 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c27); }
          }
        }
      } else {
        s1 = peg$c0;
      }
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c28(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parsesep() {
      var s0, s1;

      s0 = [];
      s1 = peg$parsecomma();
      if (s1 === peg$FAILED) {
        s1 = peg$parseindent();
      }
      while (s1 !== peg$FAILED) {
        s0.push(s1);
        s1 = peg$parsecomma();
        if (s1 === peg$FAILED) {
          s1 = peg$parseindent();
        }
      }

      return s0;
    }

    function peg$parsecolor() {
      var s0, s1, s2, s3, s4, s5;
